build: final tests and documentation - added final tests - updated docker files - added the set file to scripts dir to manage local env vars in one location - added openapi doc - created readme

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       - DB_PASSWORD=ReallyStrongPassword123
       - DB_USER=postgres
       - DB_SCHEMA=postgres
+      - DB_PORT=5432
     ports:
       - '3000:3000'
       - '9229:9229'
