--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     build: .
     depends_on:
       - db
-    command: ['./scripts/wait-for-it.sh', 'db:5432', '--', './scripts/start.sh', 'npm run test:watch']
+    command: ['./scripts/start.sh']
     restart: on-failure
     environment:
       - ENV=develop
