--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "db:seed:all": "npx sequelize-cli db:seed:all",
     "db:seed:undo": "npx sequelize-cli db:seed:undo:all",
     "db:teardown": "npm run db:seed:undo && npm run db:migration:undo",
-    "db:buildup": "npm run db:migrate && npm run db:seed:all",
+    "db:buildup": "npm run db:migrate && npm run db:seed:undo && npm run db:seed:all",
     "test:component": "export DEBUG=EMMA_LOGS && ./node_modules/.bin/cucumber-js --exit ./tests/**/*.feature -r ./tests/**/*.steps.js",
-    "test:watch": "./node_modules/.bin/nodemon -e js,json,feature --exec npm run test:component"
+    "test:watch": "npm run db:buildup && ./node_modules/.bin/nodemon -e js,json,feature --exec npm run test:component"
   },
   "author": "",
   "license": "ISC",
